<resources>
    <string name="app_name">MetersLog</string>
    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string-array name="gas_kind_names" translatable="false">
        <item>1.8</item>
        <item>3.2</item>
        <item>4.0</item>
    </string-array>
    <string-array name="gas_ultra_kind_name" translatable="false">
        <item>1.6</item>
        <item>2.5</item>
        <item>4.0</item>
        <item>6.0</item>
        <item>10.0</item>
    </string-array>
    <string-array name="water_kind_names" translatable="false">
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="empty_kind_names" translatable="false">
        <item></item>
    </string-array>

    <string name="dev_gas_name">DGM</string>
    <string name="dev_gas_dl_name">GMDL</string>
    <string name="dev_gas_ultra_name">USGM</string>
    <string name="dev_water_name">DWM</string>
    <string name="empty" translatable="false"/>
    <string name="dev_name" translatable="false">%1$s-%2$s</string>
    <string name="meter_model_and_sernum">%1$s № %2$07d</string>
    <string name="meter_reading_gas">%05.0fm³</string>
    <string name="type">Type:</string>
    <string name="model">Model:</string>
    <string name="serial">Serial:</string>
    <string name="device_uid">device_uid:</string>
    <string name="device_value">device_value:</string>
    <string name="packet_counter">packet_counter:</string>
    <string name="packet_version">packet_version:</string>
    <string name="battery_value">battery_value:</string>
    <string name="temperature_value">temperature_value:</string>
    <string name="package_data">package_data:</string>
    <string name="timestamp">timestamp:</string>
</resources>
